2005-03-20  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* data/mozilla-viewer.glade: set the proper defaults on the
	seekbar
	* src/bacon-video-widget-xine.c: (xine_event),
	(bacon_video_widget_open_with_subtitle): don't push the EOS event
	when we get a redirect
	* src/totem-mozilla-viewer.c: (totem_embedded_set_pp_state),
	(totem_embedded_open), (totem_embedded_play), (on_play_pause),
	(on_got_redirect), (on_video_button_press_event), (on_eos_event),
	(on_tick), (totem_embedded_add_children), (main):
	more work on getting the proper states, make the play button stop
	working when we reach the end of a stream that Mozilla is feeding us,
	make the seekbar show the current progress

2005-03-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: (totem_embedded_set_state),
	(totem_embedded_open), (on_got_redirect),
	(on_video_button_press_event), (on_eos_event),
	(totem_embedded_create_cursor), (embedded), (main): on EOS, we're
	not paused, but stopped. When we have an HREF attribute, set the
	cursor to be a play icon, so people know they need to click to play

2005-03-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (totem_interface_error_blocking):
	* src/totem-mozilla-viewer.c: (totem_embedded_open):
	Fix weird behaviour when a file can't be played (Mala Educacion trailer
	on apple.com)

2005-03-20  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/totem-mozilla-options.h: added
	* src/totem-mozilla-plugin.c: (totem_plugin_fork),
	(totem_plugin_new_instance):
	* src/totem-mozilla-viewer.c: (on_video_button_press_event),
	(totem_embedded_add_children), (main):
	add support for the href attribute, allows to play the Hotel Rwanda
	trailer on apple.com

2005-03-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_add_directory):
	* src/totem-playlist.c: (drop_cb): Fix drag'n'dropping of filenames
	and directories with broken UTF-8
