@@ -1,5 +1,10 @@
 2005-03-20  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-mozilla-viewer.c: (on_video_button_press_event): Haha!
+	QuickTime actually shows the controls after the initial no controls
+
+2005-03-20  Bastien Nocera  <hadess@hadess.net>
+
 	* .cvsignore: upd
 	* data/mozilla-viewer.glade: set the proper defaults on the
 	seekbar
